# simple-dex-near

./: .env  README.md  deploy.sh  package-lock.json  package.json
contracts/amm/: Cargo.toml  deploy.sh
contracts/amm/neardev/: dev-account  dev-account.env
contracts/amm/src/: constants.rs  events.rs  external.rs  ft_receiver.rs  lib.rs  market_core.rs  market_inspect.rs  market_types.rs  market_writer.rs  util.rs
contracts/tests/: Cargo.toml
contracts/tests/src/: tests.rs
contracts/token/: Cargo.toml  deploy.sh
contracts/token/neardev/: dev-account  dev-account.env
contracts/token/src/: events.rs  internal.rs  lib.rs  metadata.rs  storage.rs  token_core.rs
neardev/: dev-account  dev-account.env
old-old-neardev/: dev-account  dev-account.env
