[package]
edition = "2018"
name = "tests"
publish = false
version = "1.0.0"

[dev-dependencies]
anyhow = "1.0"
borsh = "0.9"
maplit = "1.0"
near-units = "0.2.0"
# arbitrary_precision enabled for u128 types that workspaces requires for Balance types
amm = {path = "../amm"}
pkg-config = "0.3.1"
serde_json = {version = "1.0", features = ["arbitrary_precision"]}
tokio = {version = "1.18.1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3.11", features = ["env-filter"]}
workspaces = "0.7.0"

near-sdk = "4.0.0"
serde = "1.0.130"
uint = {version = "0.9.3", default-features = false}

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"

[[example]]
name = "integration-tests"
path = "src/tests.rs"

# [workspace]
# # remember to include a member for each contract
# members = [
#   "../amm",
# ]
