[package]
authors = ["Near Inc <hello@near.org>"]
edition = "2021"
name = "ft_token"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
serde = "1.0.130"
serde_json = "1.0.89"
uint = {version = "0.9.3", default-features = false}

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"

[workspace]
members = []
